UPDATE: Splitting installation routines into sub-files. Changing Java resources consuption directly during the installation/provision phase.